   field. This is not the case when updating a bug. (LP: #947519)
 - apport-cli: Consistently handle unicode vs. byte arrays. (LP: #946207)
 - report.py, anonymize(): Fix crash when the hostname or user name contain
   non-ASCII characters. (LP: #945230)
 - packaging-apt-dpkg.py: Fix UnicodeDecodeError on unexpected md5sum output.
   (LP: #921037)

1.94 (2012-03-02)
-----------------
Bug fixes:
 - apport: Set the group of written reports to "whoopsie" if that group exists.
 - Fix tests to run properly against the system-installed modules and binaries.
 - test/run: Run under LC_MESSAGES=C to avoid test failures due to translated
   strings.
 - general-hooks/generic.py: Also attach xsession-errors for programs that link
   to libgtk-3.
 - launchpad.py: Properly handle "Expired" status, to avoid marking new bugs as
   duplicates of expired ones. (LP: #941854)
 - apport: Fix crash if the "whoopsie" group does not exist. (LP: #942326)
 - report.py, crash_signature(): Do not put "<module>" frames into Python crash
   signatures that happen outside of function/method calls. Fall back to the
   file/line number as a frame description instead. This will do a much better
   job at disambiguating e. g. different ImportError crashes. (LP: #920403)
 - Make "binary changed since the time of the crash" error message more
   comprehensible, thanks Paolo Rotolo. (LP: #942830)
 - crashdb.py, check_duplicate(): It can happen that a bug gets identified as
   being a duplicate of bug S by symbolic signatures and a duplicate of bug A
   by address signatures. Empirical evidence shows that this is due to the
   unavoidable jitter in stack traces (A and S not being identified as
   duplicates as their signatures differ slightly) and not a logic error. So
   instead of erroring out, duplicate all three bugs and keep the lowest number
   as the master ID. (LP: #943117)
 - Revert the usage of multiple nested threads during data collection, and